src/objects/Amortization_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Interest_Payment__c</fullName>
        <label>Interest Payment</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Amortization Schedules</relationshipLabel>
        <relationshipName>Amortization_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Loan__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Payment__c</fullName>
        <label>Principal Payment</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Value_Owed_to_Customer__c</fullName>
        <label>SREC Value Owed to Customer</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Value_to_BFG__c</fullName>
        <label>SREC Value to BFG</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Amortization Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Amortization Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amortization Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>